<resources>
    <string name="app_name">TNB</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="my_tnb_account_login">myTNB Account Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_email">Remember email</string>
    <string name="dont_have_tnb_account">Don\'t have a myTNB account?</string>
    <string name="register_account">Register for an account</string>
    <string name="login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="dashboard">Dashboard</string>
    <string name="bills">Bills</string>
    <string name="promotions">Promotions</string>
    <string name="feedback">Feedback</string>
    <string name="more">More</string>
    <string name="good_morning">Good Morning</string>
    <string name="accounts">Accounts</string>
    <string name="due">Due</string>
    <string name="add_another_account">Add Another Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="amount_due">Amount Due</string>
    <string name="current_bill">Current Bill</string>
    <string name="pay">Pay</string>
    <string name="add_threshold">Add Threshold</string>
    <string name="notification">notification</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="delete">Delete All</string>
    <string name="all_accounts">All Accounts</string>
    <string name="subscription_popup_msg">Subscribe to receive alerts on your consumption usage and service availablility</string>
    <string name="title_activity_notification_list">NotificationListActivity</string>
    <string name="notifications">Notifications</string>
    <string name="title_activity_notification_settings">NotificationSettings</string>
    <string name="notification_toggle_heading">Set notifications for accounts below</string>
    <string name="notification_sms_heading">SMS notifications are only activated for important messages like billing payment and service disruption</string>
    <string name="title_activity_notification_detail_page">NotificationDetailPage</string>
    <string name="here_is_a_tip">Here\'s a tip!</string>
    <string name="set_primary_account">Set Primary Account</string>
    <string name="go_to_account">Return to Account</string>
    <string name="manage_consumption">Manage Consumption</string>
    <string name="manage_consumption_message">Set a consumption threshold and start monitoring your accounts</string>
    <string name="people_question">How many people are staying in %1$s?</string>
    <string name="question2">Notify me when my consumption reaches (RM)</string>
    <string name="success_manage_consumption">You have successfully set up your consumption threshold for %1$s.</string>
    <string name="manage_accounts_message">Select accounts to manage consumption and receive consumption threshold notifications.</string>
    <string name="manage_accounts_questions">Tell us more about your favourite accounts and gain consumption insights.</string>
    <string name="people_question_accounts">How many people are staying in the property?</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="close">Close</string>
    <string name="service_disruption">Service Disruption Alert</string>
    <string name="service_disruption_msg">Account %1$s is currently experiencing service disruption. Apologies for the inconvenience caused.</string>
    <string name="service_restoration">Service Restored</string>
    <string name="service_restoration_msg">Power is restored at %1$s. Apologies for the inconvenience caused.</string>
    <string name="not_sure">I\'m not sure</string>
    <string name="pay_bills">Pay Bills</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="lifestyle_offers">Lifestyle Offers</string>
    <string name="personalise_your_offers">Personalise your offers</string>
    <string-array name="months">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="manage_accounts">Manage Accounts</string>
    <string name="daily">Daily</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="weekly">Weekly</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="sms">SMS</string>
    <string name="billamount_format">%+.2f $</string>
    <string name="notification_global_toggle_heading">Select how you wish to receive your notifications</string>
    <string name="insights_title">Welcome, Mohd Zulkifli!</string>
    <string name="insights_desc">Start prioritising and optimising your energy consumption today with our Energy Insights intelligence.</string>
    <string name="generate_Insights">Generate Insights</string>
    <string name="view_energy_breakdown">View Energy Breakdown</string>
    <string name="breakdown_question">What electrical appliances do you have at home?</string>
    <string name="session_expired_msg">Something isn\'t right. There seems to be an error here, please try to login again.</string>
    <string name="something_not_right">Something isn\'t right</string>
    <string name="back_to_login">Back to login</string>
    <string name="can_get_signal">We can\'t get a signal</string>
    <string name="offline_msg">Check your connection (or) Try again Later</string>
    <string name="refresh">Refresh</string>
</resources>
