<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/bg_tab_selector"
        android:title="@string/dashboard" />

    <item
        android:id="@+id/navigation_bills"
        android:icon="@drawable/bg_tab_selector"
        android:title="@string/bills" />

    <item
        android:id="@+id/navigation_promotions"
        android:icon="@drawable/bg_tab_selector"
        android:title="@string/promotions" />

    <item
        android:id="@+id/navigation_feedback"
        android:icon="@drawable/bg_tab_selector"
        android:title="@string/feedback" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/bg_tab_selector"
        android:title="@string/more" />

</menu>
