<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dashboard.manageAccounts.ManageAccountsFragment">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/manage_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/museosans_500"
        android:text="@string/manage_accounts"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_medium"
        android:textAlignment="center"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/manage_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_padding"
        android:layout_marginRight="@dimen/dimen50"
        android:layout_marginLeft="@dimen/dimen50"
        android:fontFamily="@font/museosans_500"
        android:text="@string/manage_accounts_message"
        android:textColor="@color/light_white_40"
        android:textSize="@dimen/text_size_very_small"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_white_30"
        android:orientation="horizontal"
        android:padding="@dimen/medium_padding"
        android:weightSum="2"
        android:layout_marginTop="@dimen/margin20">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/museosans_500"
            android:gravity="left"
            android:text="@string/accounts"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_medium1" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvManageAccounts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent" />

</LinearLayout>