<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dashboard.manageAccounts.ManageAccountsFragment">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/manage_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/museosans_500"
        android:text="@string/manage_accounts"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_medium"
        android:textAlignment="center"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/manage_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_padding"
        android:layout_marginRight="@dimen/dimen50"
        android:layout_marginLeft="@dimen/dimen50"
        android:layout_below="@+id/manage_title"
        android:fontFamily="@font/museosans_500"
        android:text="@string/manage_accounts_questions"
        android:textColor="@color/light_white_40"
        android:textSize="@dimen/text_size_very_small"
        android:textAlignment="center" />

    <android.support.design.widget.TabLayout
        android:id="@+id/tlDots"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_below="@+id/manage_message"
        app:tabBackground="@drawable/splash_tab_selector"
        app:tabGravity="center"
        app:tabIndicatorHeight="0dp" />

    <android.support.v4.view.ViewPager
        android:id="@+id/vpQuestionItems"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tlDots" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnNext"
        android:layout_width="@dimen/dimen138"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="right"
        android:layout_margin="@dimen/large_padding"
        android:layout_marginBottom="@dimen/large_padding"
        android:background="@drawable/bg_login_btn"
        android:fontFamily="@font/museosans_500"
        android:gravity="center"
        android:minWidth="100dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_medium" />

</RelativeLayout>