<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".dashboard.DashboardFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:fontFamily="@font/museosans_500"
                android:text="@string/good_morning"
                android:textColor="@color/yellow1"
                android:textSize="@dimen/text_size_medium" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:fontFamily="@font/museosans_500"
                android:text="User"
                android:textColor="@color/yellow1"
                android:textSize="@dimen/text_size_medium" />

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:scaleType="fitXY"
                android:src="@drawable/home_header_img" />

        </LinearLayout>

        <include
            layout="@layout/subscribe_popup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/large_padding"
            android:layout_marginRight="@dimen/large_padding" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/medium_padding"
        android:weightSum="2">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/museosans_500"
            android:gravity="center"
            android:text="@string/accounts"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_medium1" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/museosans_500"
            android:gravity="center"
            android:text="@string/due"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_medium1" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvAccounts"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/transparent" />

    <FrameLayout
        android:id="@+id/flDashboardContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>